--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,16 @@
 		<p class="notice"><%= notice %></p>
       	<p class="alert"><%= alert %></p>
 	  </header>
+	  <nav id="nav">
+	    <ul>
+	      <li><a href="/" class="active">Directory</a></li>
+		  <li><a href="/office-bearers">Office Bearers</a></li>
+		  <li><a href="/subscriptions">Subscription</a></li>
+		  <li><a href="/election">Election</a></li>
+		  <li><a href="/articles">Articles</a></li>
+		  <li><a href="http://forum.tnja.in">Forum</a></li>
+		</ul>
+	  </nav>
 	  <div id="main">
 	  <%= yield %>
 	  </div>
