--- a/app/views/directory/index.html.erb
+++ b/app/views/directory/index.html.erb
@@ -2,4 +2,17 @@
   <header class="major">
     <h2>Directory</h2>
   </header>
- </section>
+</section>
+<% @categories.each do |category| %>
+  <section class="main special">
+    <header class="major">
+	  <h2><%= category.name %></h2>
+	</header>
+	<dl class="alt">
+      <% category.users.each do |user| %>
+        <dt><%= user.rank %></dt>
+        <dd><%= user.full_name %></dd>
+	  <% end %>
+	</dl>
+  </section>
+<% end %>
